--- a/partners.html
+++ b/partners.html
@@ -166,9 +166,9 @@
 													</div>
 												</div>
 												<div class="card-sum__btns">
-													<button type="button" class="card-sum__btn one-hundred">100 UAH</button>
-													<button type="button" class="card-sum__btn five-hundred">500 UAH</button>
-													<button type="button" class="card-sum__btn thousand">1000 UAH</button>
+													<button type="button" class="card-sum__btn one-hundred">100 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn five-hundred">500 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn thousand">1000 <span id="sum__btn-valuta">UAH</span></button>
 												</div>
 											</div>
 										</div>
@@ -259,7 +259,7 @@
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-							<input type="tel" placeholder="+3806711111111" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
+							<input type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
