--- a/vacancy.html
+++ b/vacancy.html
@@ -4,12 +4,12 @@
 <head>
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
 	<meta charset="UTF-8">
-	<meta name="format-detection" content="telephone=no">
+	<!--<meta name="format-detection" content="telephone=no">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.css">
 
 	<link rel="shortcut icon" href="logo.ico">
-
 
 	<meta name="Волонтерський Рух України" content="Волонтерський Рух України, збір коштів на машини для ЗСУ">
 	<meta name="description" content="збір коштів на машини для ЗСУ, донат">
@@ -101,9 +101,9 @@
 													</div>
 												</div>
 												<div class="card-sum__btns">
-													<button type="button" class="card-sum__btn one-hundred">100 UAH</button>
-													<button type="button" class="card-sum__btn five-hundred">500 UAH</button>
-													<button type="button" class="card-sum__btn thousand">1000 UAH</button>
+													<button type="button" class="card-sum__btn one-hundred">100 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn five-hundred">500 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn thousand">1000 <span id="sum__btn-valuta">UAH</span></button>
 												</div>
 											</div>
 										</div>
@@ -193,7 +193,7 @@
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-							<input type="tel" placeholder="+3806711111111" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
+							<input type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
