--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
 	<!---<meta name="format-detection" content="telephone=no">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.css">
-	<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-/>
-
+	<link rel="stylesheet" href="css/style.css">	
 	<link rel="shortcut icon" href="logo.ico">
-
-
 	<meta name="Волонтерський Рух України" content="Волонтерський Рух України, збір коштів на машини для ЗСУ">
-	<meta name="description" content="збір коштів на машини для ЗСУ, донат">
+	<meta name="description" content="збір коштів на машини для ЗСУ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	
 </head>
 
 
@@ -234,7 +229,7 @@
 				</div> -->
 
 	</div>
-	</section>
+			</section>
 
 
 
@@ -316,16 +311,15 @@
 								<li class="list-item"><span class="list-item-title">IBAN UAH:</span></li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ КБ «ПРИВАТБАНК»</span>
-									<div class="list-item-text"> UA633052990000026005014933699<span class="_icon-copy"></span></div>
+									<div class="list-item-text" ><span id="copy-text-one"> UA633052990000026005014933699</span><span class="_icon-copy" id="copy-one"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «Універсал банк»</span>
-									<div class="list-item-text">UA103220010000026004170000618 <span class="_icon-copy"></span></div>
+									<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span class="_icon-copy" id="copy-second"></span></div>
 								</li>
 								<li class="list-item">
 									<span class="list-item-title bank">АТ «ПУМБ»</span>
-									<div class="list-item-text">UA873348510000000026000204673
-										<span class="_icon-copy"></span>
+									<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span class="_icon-copy" id="copy-third"></span>
 									</div>
 								</li>
 							</ul>
@@ -338,7 +332,7 @@
 								<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А Gagarina avenue, Odesa, 65039, Ukraine</li>
 								<li class="list-item">
 									<span class="list-item-title">IBAN: </span>
-									<div class="list-item-text">UA443052990000026006034918626 <span class="_icon-copy"></span></div>
+									<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span class="_icon-copy" id="copy-fourth"></span></div>
 								</li>
 								<li class="list-item"><span class="list-item-title">Bank name: </span>JSC CB "PRIVATBANK"</li>
 								<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE</li>
@@ -427,8 +421,9 @@
 		</div>
 	</div>
 
-	<script src="js/app.js"></script>
 
+	
+	<script src="js/app.js"></script>
 
 
 	<script>
@@ -479,7 +474,7 @@
 				
 			})
 	
-				 
+			
 	</script>
 
 
