--- a/partners.html
+++ b/partners.html
@@ -212,21 +212,20 @@
 										<li class="list-item"><span class="list-item-title">IBAN UAH:</span></li>
 										<li class="list-item">
 											<span class="list-item-title bank">АТ КБ «ПРИВАТБАНК»</span>
-											<div class="list-item-text"> UA633052990000026005014933699<span class="_icon-copy"></span></div>
+											<div class="list-item-text" ><span id="copy-text-one"> UA633052990000026005014933699</span><span class="_icon-copy" id="copy-one"></span></div>
 										</li>
 										<li class="list-item">
 											<span class="list-item-title bank">АТ «Універсал банк»</span>
-											<div class="list-item-text">UA103220010000026004170000618 <span class="_icon-copy"></span></div>
+											<div class="list-item-text"><span id="copy-text-second">UA103220010000026004170000618 </span><span class="_icon-copy" id="copy-second"></span></div>
 										</li>
 										<li class="list-item">
 											<span class="list-item-title bank">АТ «ПУМБ»</span>
-											<div class="list-item-text">UA873348510000000026000204673
-												<span class="_icon-copy"></span>
+											<div class="list-item-text"><span id="copy-text-third">UA873348510000000026000204673</span><span class="_icon-copy" id="copy-third"></span>
 											</div>
 										</li>
 									</ul>
 								</div>
-
+		
 								<div class="tab__card invoice">
 									<div class="invoice-title" data-lang="home_page-55">Перекази в іноземній валюті</div>
 									<ul class="invoice-list list">
@@ -234,14 +233,14 @@
 										<li class="list-item"><span class="list-item-title">Account holder address: </span> 110 office,12А Gagarina avenue, Odesa, 65039, Ukraine</li>
 										<li class="list-item">
 											<span class="list-item-title">IBAN: </span>
-											<div class="list-item-text">UA443052990000026006034918626 <span class="_icon-copy"></span></div>
+											<div class="list-item-text"> <span id="copy-text-fourth">UA443052990000026006034918626 </span><span class="_icon-copy" id="copy-fourth"></span></div>
 										</li>
 										<li class="list-item"><span class="list-item-title">Bank name: </span>JSC CB "PRIVATBANK"</li>
 										<li class="list-item"><span class="list-item-title">Bank address: </span>1D HRUSHEVSKOHO STR., KYIV, 01001, UKRAINE</li>
 										<li class="list-item"><span class="list-item-title">SWIFT: </span>PBANUA2X</li>
 									</ul>
 								</div>
-
+		
 							</div>
 						</div>
 					</div>
