--- a/help.html
+++ b/help.html
@@ -5,14 +5,10 @@
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.css">
-
 	<link rel="shortcut icon" href="logo.ico">
-
-
-	<meta name="Волонтерський Рух України" content="Волонтерський Рух України, збір коштів на машини для ЗСУ">
-	<meta name="description" content="збір коштів на машини для ЗСУ">
+	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
+	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
