--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
 
 	
 	<script src="js/app.js"></script>
-	<script>
+	<script src="js/slider.js"></script>
+<!---	<script>
 		
 		let sliderLeftBtn = document.querySelector('#slider-left');     
 	  	let left = 0;
@@ -444,7 +445,7 @@
 				
 			})	
 			
-	</script>
+	</script> --->
 </body>
 </html>
 
