--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 	
 	<script src="js/app.js"></script>
-	<script src="js/slider.js"></script>
+	<script src="js/slider.min.js"></script>
 
 </body>
 </html>
