--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
 		<header class="header-page">
 			<div class="header-page__box">
 				<div class="header__logo">
-					<div class="header__logo-img"><a href="index.html"><picture><source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt=""></picture></a></div>
+					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
 					<div class="header__logo-text">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
@@ -26,8 +26,8 @@
 					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a></li>
 				</ul>
 				<div class="header-page__btns">
-					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr">UA</button>
-					<button class="header__btns-btn" data-btn="en">EN</button>
+					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr" name="ukr">UA</button>
+					<button class="header__btns-btn" data-btn="en" name="en">EN</button>
 				</div>
 			</div>
 		</header>
