--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="why__content">
 						<div class="why__title title" data-lang="home_page-30">Чому важливо донатити на авто для ЗСУ?</div>
 					</div>
-					<div>
+					<div class="why__text-container">
 						<p class="why__text text" data-lang="home_page-31">Автомобілі на фронті відіграють дуже важливу роль у веденні бойових дій, адже завдяки ним наші захисники мають змогу проводити розвідувальні операції, транспортувати потерпілих з гарячих точок та підвищувати свою мобільність.</p>
 						<p class="why__text text" data-lang="home_page-32">Нажаль, автомоболі на фронті є розхідним матеріалом, тому гостра потреба в них залишається завжди. </p>
 					</div>
