--- a/vacancy.html
+++ b/vacancy.html
@@ -19,7 +19,7 @@
 		<header class="header-page">
 			<div class="header-page__box">
 				<div class="header__logo">
-					<div class="header__logo-img"><a href="index.html"><picture><source srcset="img/logo.webp" type="image/webp"><img src="img/logo.png" alt=""></picture></a></div>
+					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
 					<div class="header__logo-text">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
@@ -27,8 +27,8 @@
 					<li class="header__nav-item avto"><a href="index.html#contact-form" data-lang="help_page-18">Запит на авто</a></li>
 				</ul>
 				<div class="header-page__btns">
-					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr">UA</button>
-					<button class="header__btns-btn" data-btn="en">EN</button>
+					<button class="header__btns-btn header__btns-btn--active" data-btn="ukr" name="ukr">UA</button>
+					<button class="header__btns-btn" data-btn="en" name="en">EN</button>
 				</div>
 			</div>
 		</header>
@@ -70,9 +70,9 @@
 				<div class="donat__box">
 					<div data-tabs class="donat-tabs" id="donat">
 						<nav data-tabs-titles class="donat-tabs__navigation">
-							<button type="button" class="donat-tabs__title _tab-active" data-lang="home_page-43">Переказ карткою</button>
-							<button type="button" class="donat-tabs__title" data-lang="home_page-44">Mono банка</button>
-							<button type="button" class="donat-tabs__title" data-lang="home_page-45">Реквізити</button>
+							<button type="button" class="donat-tabs__title _tab-active" data-lang="home_page-43" name="переказ карткою">Переказ карткою</button>
+							<button type="button" class="donat-tabs__title" data-lang="home_page-44" name="mono банка">Mono банка</button>
+							<button type="button" class="donat-tabs__title" data-lang="home_page-45" name="реквізити">Реквізити</button>
 						</nav>
 						<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
 						<div data-tabs-body class="donat-tabs__content">
@@ -98,9 +98,9 @@
 													</div>
 												</div>
 												<div class="card-sum__btns">
-													<button type="button" class="card-sum__btn one-hundred">100 <span id="sum__btn-valuta">UAH</span></button>
-													<button type="button" class="card-sum__btn five-hundred">500 <span id="sum__btn-valuta">UAH</span></button>
-													<button type="button" class="card-sum__btn thousand">1000 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn one-hundred" name="100">100 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn five-hundred" name="500">500 <span id="sum__btn-valuta">UAH</span></button>
+													<button type="button" class="card-sum__btn thousand" name="1000">1000 <span id="sum__btn-valuta">UAH</span></button>
 												</div>
 											</div>
 										</div>
@@ -114,13 +114,13 @@
 									</form>
 									<button type="button" class="tab__card-btn btn-blue" name="donat"><a data-lang="home_page-49" href="#">Підтримати</a><span class="_icon-arrowicon"></span></button>
 								</div>
-								<button type="button" class="tab__btn btn" id="subs"><a href="#" data-lang="home_page-50">Оформити підписку</a><span class="_icon-arrowicon"></span> </button>
+								<button type="button" class="tab__btn btn" id="subs" name="оформити підписку"><a href="#" data-lang="home_page-50">Оформити підписку</a><span class="_icon-arrowicon"></span> </button>
 							</div>
 
 							<div class="donat-tabs__body tab">
 								<div class="tab__card">
 									<div class="tab__card-sum">
-										<button type="button" class="tab__mono-btn btn"><a href="#" data-lang="home_page-51">Mono банка</a><span class="_icon-arrowicon"></span></button>
+										<button type="button" class="tab__mono-btn btn" name="mono"><a href="#" data-lang="home_page-51">Mono банка</a><span class="_icon-arrowicon"></span></button>
 									</div>
 									<form class="tab__card-mail">
 										<label for="input-email" class="tab__card-label">Email*</label>
@@ -131,7 +131,7 @@
 									</form>
 
 								</div>
-								<button type="button" class="tab__btn btn" id="subs"><a href="#" data-lang="home_page-53">Оформити підписку</a><span class="_icon-arrowicon"></span> </button>
+								<button type="button" class="tab__btn btn" id="subs" name="оформити підписку"><a href="#" data-lang="home_page-53">Оформити підписку</a><span class="_icon-arrowicon"></span> </button>
 							</div>
 
 							<div class="donat-tabs__body tab">
@@ -196,7 +196,7 @@
 							<input type="email" placeholder="peremoga@gmail.com" class="contact-item__input input" name="contact-item__email" id="contact-item__email">
 						</div>
 					</div>
-					<button type="button" class="contact-form__btn" data-modal data-lang="home_page-59">Надіслати</button>
+					<button type="button" class="contact-form__btn" data-modal data-lang="home_page-59" name="donat">Надіслати</button>
 				</form>
 			</section>
 
@@ -229,8 +229,8 @@
 						</ul>
 					</div>
 					<div class="footer__btns btn">
-						<button class="footer__btns-btn header__btns-btn--active" data-btn="ukr">UA</button>
-						<button class="footer__btns-btn" data-btn="en">EN</button>
+						<button class="footer__btns-btn header__btns-btn--active" data-btn="ukr" name="ukr">UA</button>
+						<button class="footer__btns-btn" data-btn="en" name="en">EN</button>
 					</div>
 				</div>
 				<button class="footer__btn-main btn" name="donat"><a data-lang="home_page-67" href="index.html#donat">Підтримати</a><span class="_icon-arrowicon"></span></button>
@@ -242,13 +242,13 @@
 
 	<div class="modal">
 		<div class="modal__wrapper">
-			<button data-close type="button" class="modal__close">&times;</button>
-			<!---<div data-close class="modal__close">&times;</div>--->
+			<button data-close type="button" class="modal__close" name="close">&times;</button>
+			
 			<div class="modal__text">
 				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами зв’яжуться.</p>
 				<p data-lang="home_page-69">Все буде Україна!</p>
 			</div>
-			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
+			<button data-close type="button" class="modal__btn btn-blue" name="donat"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
 
