--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 
 <head>
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">	
-	<link rel="shortcut icon" href="logo.ico">
+	<link rel="shortcut icon" href="img/logo.ico">
 	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
 	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -380,9 +380,6 @@
 		</div>
 	</footer>
 	</div>
-
-
-
 
 	<div class="modal">
 		<div class="modal__wrapper">
