--- a/help.html
+++ b/help.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 
 <head>
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
