--- a/help.html
+++ b/help.html
@@ -2,11 +2,11 @@
 <html lang="ua">
 
 <head>
-	<title data-lang="home_page-title">Волонтерський Рух України</title>
+	<title data-lang="home_page-title">Волонтерський Рух України | Запитання</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="logo.ico">
+	<link rel="shortcut icon" href="img/logo.ico">
 	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
 	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
