--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">	
 	<link rel="shortcut icon" href="img/logo.ico">
 	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
-	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
-	
+	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">	
 	
 </head>
 
@@ -50,7 +49,7 @@
 			<section class="info">
 				<div class="info__box">
 					<div class="info__name">
-						<h3 class="info__name-title" data-lang="home_page-4">Ми – Волонтерський Рух України</h3>
+						<h2 class="info__name-title" data-lang="home_page-4">Ми – Волонтерський Рух України</h2>
 						<p class="info__name-text text" data-lang="home_page-5">Про Благодійний фонд</p>
 					</div>
 					<div class="info__about">
@@ -63,7 +62,7 @@
 
 			<section class="partners">
 				<div class="partners__box">
-					<div class="partners__title title" data-lang="home_page-9">Наші партнери</div>
+					<h2 class="partners__title title" data-lang="home_page-9">Наші партнери</h2>
 					<div class="partners__list">
 						<div class="partners__list-item item-list">
 							<div>
@@ -119,7 +118,7 @@
 
 			<section class="cars">
 				<div class="cars__box">
-					<div class="cars__title title" data-lang="home_page-23">Найпоширеніші авто, що ми закуповуємо</div>
+					<h2 class="cars__title title" data-lang="home_page-23">Найпоширеніші авто, що ми закуповуємо</h2>
 					<div class="cars__items">
 						<div class="cars__items-item car">
 							<div class="car__content">
@@ -142,7 +141,7 @@
 			<section class="why">
 				<div class="why__box">
 					<div class="why__content">
-						<div class="why__title title" data-lang="home_page-30">Чому важливо донатити на авто для ЗСУ?</div>
+						<h2 class="why__title title" data-lang="home_page-30">Чому важливо донатити на авто для ЗСУ?</h2>
 					</div>
 					<div class="why__text-container">
 						<p class="why__text text" data-lang="home_page-31">Автомобілі на фронті відіграють дуже важливу роль у веденні бойових дій, адже завдяки ним наші захисники мають змогу проводити розвідувальні операції, транспортувати потерпілих з гарячих точок та підвищувати свою мобільність.</p>
@@ -155,7 +154,7 @@
 
 			<section class="join">
 				<div class="join__box">
-					<div class="join__title title" data-lang="home_page-34">Як ти можеш долучитись?</div>
+					<h2 class="join__title title" data-lang="home_page-34">Як ти можеш долучитись?</h2>
 					<div class="join__items">
 						<div class="join__items-item items-item">
 							<div class="items-item__number">01</div>
@@ -183,7 +182,7 @@
 			<section class="progress">
 				<div class="progress__box">
 					<div class="progress__info">
-						<div class="progress__title title" data-lang="home_page-42">Наші досягнення </div>
+						<h2 class="progress__title title" data-lang="home_page-42">Наші досягнення </h2>
 						<button class="progress__btn " type="button" name="slider" id="slider-left"><span class="_icon-arrow-right"></span></button>
 					</div>
 					<div class="progress__wrapper">						
@@ -225,7 +224,7 @@
 									<label for="sum-donat" class="tab__card-label" data-lang="home_page-47">Сума внеску</label>
 									<div class="card-sum__donat">
 										<div class="card-sum__input">
-											<input type="text" placeholder="0" class="input" id="sum-donat" name="sum-donat">
+											<input type="text" placeholder="0" class="input" id="sum-donat1" name="sum-donat1">
 											<div class="sum__input form-group">
 												<div class="dropdown">
 													<button class="sum__input-title btn dropdown__button">UAH </button>
@@ -250,8 +249,8 @@
 							<form class="tab__card-mail">
 								<label for="input-email" class="tab__card-label">Email*</label>
 								<div class="card-mail">
-									<input type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
-									<div class="card-mail-text" data-lang="home_page-48">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</div>
+									<input required type="email" class="input" placeholder="Введіть ваш email" id="input-email1" name="input-email">
+									<p class="card-mail-text" data-lang="home_page-48">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</p>
 								</div>
 							</form>
 							<button type="button" class="tab__card-btn btn-blue" name="donat"><a data-lang="home_page-49" href="#">Підтримати</a><span class="_icon-arrowicon"></span></button>
@@ -267,8 +266,8 @@
 							<form class="tab__card-mail">
 								<label for="input-email" class="tab__card-label">Email*</label>
 								<div class="card-mail">
-									<input type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
-									<div class="card-mail-text" data-lang="home_page-52">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</div>
+									<input required type="email" class="input" placeholder="Введіть ваш email" id="input-email2" name="input-email">
+									<p class="card-mail-text" data-lang="home_page-52">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</p>
 								</div>
 							</form>
 
@@ -328,15 +327,15 @@
 			<div class="contact-form__content">
 				<div class="contact-form__item contact-item">
 					<label for="contact-item__name" class="tab__card-label contact-item__label" data-lang="home_page-57">Ім’я</label>
-					<input type="text" placeholder="Перемога" class="contact-item__input input" name="contact-item__name" id="contact-item__name">
+					<input required type="text" placeholder="Перемога" class="contact-item__input input" name="contact-item__name" id="contact-item__name">
 				</div>
 				<div class="contact-form__item contact-item">
 					<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-					<input type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
+					<input required type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
 				</div>
 				<div class="contact-form__item contact-item">
 					<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
-					<input type="email" placeholder="peremoga@gmail.com" class="contact-item__input input" name="contact-item__email" id="contact-item__email">
+					<input required type="email" placeholder="peremoga@gmail.com" class="contact-item__input input" name="contact-item__email" id="contact-item__email">
 				</div>
 			</div>
 			<button type="button" class="contact-form__btn" data-modal data-lang="home_page-59" name="donat">Надіслати</button>
@@ -349,7 +348,7 @@
 			<div class="footer__form" id="report">
 				<div class="footer__form-text" data-lang="home_page-60">Залишай свою електронну пошту та отримуй звітність про діяльність фонду. Будь завжди в курсі !</div>
 				<form class="footer__form-input">
-					<input autocomplete="off" type="email" name="form-footer" data-error="Помилка" placeholder="Твій email" class="input">
+					<input required autocomplete="off" type="email" name="form-footer" data-error="Помилка" placeholder="Твій email" class="input">
 					<button type="button" class="footer__form-btn" name="donat"><span class="_icon-arrowicon"></span></button>
 				</form>
 			</div>
