--- a/vacancy.html
+++ b/vacancy.html
@@ -108,8 +108,8 @@
 									<form class="tab__card-mail">
 										<label for="input-email" class="tab__card-label">Email*</label>
 										<div class="card-mail">
-											<input type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
-											<div class="card-mail-text" data-lang="home_page-48">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</div>
+											<input required type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
+											<p class="card-mail-text" data-lang="home_page-48">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</p>
 										</div>
 									</form>
 									<button type="button" class="tab__card-btn btn-blue" name="donat"><a data-lang="home_page-49" href="#">Підтримати</a><span class="_icon-arrowicon"></span></button>
@@ -125,8 +125,8 @@
 									<form class="tab__card-mail">
 										<label for="input-email" class="tab__card-label">Email*</label>
 										<div class="card-mail">
-											<input type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
-											<div class="card-mail-text" data-lang="home_page-52">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</div>
+											<input required type="email" class="input" placeholder="Введіть ваш email" id="input-email" name="input-email">
+											<p class="card-mail-text" data-lang="home_page-52">Вам надійде квитанція на email та ви будете отримувати звітності по вашому внеску</p>
 										</div>
 									</form>
 
@@ -185,15 +185,15 @@
 					<div class="contact-form__content">
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__name" class="tab__card-label contact-item__label" data-lang="home_page-57">Ім’я</label>
-							<input type="text" placeholder="Перемога" class="contact-item__input input" name="contact-item__name" id="contact-item__name">
+							<input required type="text" placeholder="Перемога" class="contact-item__input input" name="contact-item__name" id="contact-item__name">
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__tel" class="tab__card-label contact-item__label" data-lang="home_page-58">Номер телефону</label>
-							<input type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
+							<input required type="tel" placeholder="+38 067 111 11 11" class="contact-item__input input" name="contact-item__tel" id="contact-item__tel">
 						</div>
 						<div class="contact-form__item contact-item">
 							<label for="contact-item__email" class="tab__card-label contact-item__label">Email</label>
-							<input type="email" placeholder="peremoga@gmail.com" class="contact-item__input input" name="contact-item__email" id="contact-item__email">
+							<input required type="email" placeholder="peremoga@gmail.com" class="contact-item__input input" name="contact-item__email" id="contact-item__email">
 						</div>
 					</div>
 					<button type="button" class="contact-form__btn" data-modal data-lang="home_page-59" name="donat">Надіслати</button>
@@ -204,9 +204,9 @@
 		<footer class="footer">
 			<div class="footer__box">
 				<div class="footer__form" id="report">
-					<div class="footer__form-text" data-lang="home_page-60">Залишай свою електронну пошту та отримуй звітність про діяльність фонду. Будь завжди в курсі !</div>
+					<p class="footer__form-text" data-lang="home_page-60">Залишай свою електронну пошту та отримуй звітність про діяльність фонду. Будь завжди в курсі !</p>
 					<form class="footer__form-input">
-						<input autocomplete="off" type="email" name="form-footer" data-error="Помилка" placeholder="Твій email" class="input">
+						<input required autocomplete="off" type="email" name="form-footer" data-error="Помилка" placeholder="Твій email" class="input">
 						<button type="button" class="footer__form-btn"><span class="_icon-arrowicon"></span></button>
 					</form>
 				</div>
