--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 									<label for="sum-donat" class="tab__card-label" data-lang="home_page-47">Сума внеску</label>
 									<div class="card-sum__donat">
 										<div class="card-sum__input">
-											<input type="text" placeholder="0" class="input" id="sum-donat1" name="sum-donat1">
+											<input type="text" placeholder="0" class="input" id="sum-donat" name="sum-donat1">
 											<div class="sum__input form-group">
 												<div class="dropdown">
 													<button class="sum__input-title btn dropdown__button">UAH </button>
